--- a/03 - CSS Variables/style.css
+++ b/03 - CSS Variables/style.css
@@ -1,7 +1,21 @@
+:root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+}
+
+img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+}
+
+.hl {
+    color: var(--base);
+}
 /*
   misc styles, nothing to do with CSS variables
 */
-
 body {
   text-align: center;
   background: #193549;
