--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -17,6 +17,7 @@ body {
 .panels {
   min-height: 100vh;
   overflow: hidden;
+  display: flex;
 }
 
 .panel {
@@ -34,6 +35,11 @@ body {
   font-size: 20px;
   background-size: cover;
   background-position: center;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -47,6 +53,26 @@ body {
   margin: 0;
   width: 100%;
   transition: transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel > *:first-child {
+  transform: translateY(-100%)
+}
+
+.panel.open-active > *:first-child {
+  transform: translateY(0%)
+}
+
+.panel > *:last-child {
+  transform: translateY(100%)
+}
+
+.panel.open-active > *:last-child {
+  transform: translateY(0%)
 }
 
 .panel p {
@@ -62,4 +88,5 @@ body {
 
 .panel.open {
   font-size: 40px;
+  flex: 5;
 }
