conditionally apply trigger-enter-active class

--- a/26 - Stripe Follow Along Nav/style.css
+++ b/26 - Stripe Follow Along Nav/style.css
@@ -65,6 +65,14 @@ nav ul {
   display: none;
 }
 
+.trigger-enter .dropdown{
+  display: block;
+}
+
+.trigger-enter-active .dropdown{
+  opacity: 1;
+}
+
 .trigger-enter .dropdown {
   display: block;
 }
